series MILP. done midGap, next to check N C zones